--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "server-taseven",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "license": "MIT",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.js",
@@ -20,7 +23,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
