--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
+    "google-auth-library": "9.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
